[project]
name = "netsniffer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.12.9",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true