[project]
name = "netsniffer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.3",
    "netifaces>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.12.9",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true
